# figrecover

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: roadmap_task.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
docs/guides/: api-stability.rst  citation-support.rst  corpus-workflow.rst  development-checks.rst  examples.rst  integrations.rst  limitations.rst  local-vlm-assistance.rst  manual-calibrated-extraction.rst  qa-review-workflow.rst  quickstart.rst  release-process.rst  statement-of-need.rst  workflow-boundaries.rst
docs/reference/: api.rst  cli.rst
examples/: README.md  mocked_vlm_metadata.py  synthetic_chart_extraction.py  synthetic_pdf_corpus.py
paper/: paper.bib  paper.md
planning/: README.md  architecture-contract.md  femic-fhops-integration-survey.md  joss-exemplar-paper-review.md  joss-paper-plan.md  joss-paper-readiness-checklist.md  open-software-survey.md  package-scope-and-implementation-plan.md  phase-1-closeout-phase-2-inputs.md  phase-2-closeout-phase-3-inputs.md  phase-3-closeout-phase-4-inputs.md  phase-4-closeout-phase-5-inputs.md  phase-5-closeout-phase-6-inputs.md  phase-6-closeout-phase-7-inputs.md  phase-7-closeout-phase-8-inputs.md  phase-8-closeout-phase-9-inputs.md  publication-closeout-checklist.md  pyopensci-readiness-checklist.md  pyopensci-submission-response-plan.md  tfl6-case-study-publication-plan.md  tfl6-mp11-deployment-feedback.md  tfl6-prototype-harness.md  v1-readiness-gap-analysis.md  v1-release-archive-plan.md
src/figrecover/: __init__.py  adapters.py  calibration.py  cli.py  digitize.py  documents.py  extraction.py  image.py  io.py  manifest.py  models.py  pdf.py  pipeline.py  qa.py  records.py  review.py  vlm.py
src/figrecover/integrations/: __init__.py  femic.py  fhops.py  generic.py
tests/: test_adapters.py  test_calibration.py  test_cli.py  test_digitize.py  test_documents.py  test_examples.py  test_integrations.py  test_pipeline.py  test_qa_review.py  test_records.py  test_vlm.py
tools/: render_joss_paper.py
